# macroquad

./: Cargo.toml  README.md
examples/: square.rs
src/: audio.rs  color.rs  error.rs  exec.rs  input.rs  lib.rs  models.rs  prelude.rs  quad_gl.rs  shapes.rs  text.rs  texture.rs  window.rs
src/math/: mod.rs  rect.rs
src/texture/: slotmap.rs
