[package]
name = "macroquad"
version = "0.4.14"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/not-fl3/macroquad"
repository = "https://github.com/not-fl3/macroquad"
description = "Simple and easy to use graphics library"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
audio = ["quad-snd"]
rand = ["quad-rand"]
image = ["dep:image"]
text = ["dep:fontdue"]
log = ["dep:log"]
glam-serde = ["glam/serde"]
default = []

[package.metadata.android]
assets = "examples/"

[package.metadata.docs.rs]
all-features = true

[dependencies]
miniquad = { version = "=0.4.8", features = ["log-impl"] }
quad-rand = { version = "0.2.3", optional = true }
glam = { version = "0.30.4", features = ["scalar-math"] }
image = { version = "0.25.6", optional = true, default-features = false, features = [
    "png",
    "tga",
] }
fontdue = { version = "0.9.3", optional = true, default-features = false }
backtrace = { version = "0.3.60", optional = true }
log = { version = "0.4", optional = true }
quad-snd = { version = "0.2", optional = true }
